@@ -8,7 +8,7 @@
 #                i.e. the time index var is interpreted as a numerical
 # 
 
-## in the future, maybe make pconsective could gain an additional argument 'fill' for the filled value (currently NA)
+## in the future, maybe make.pconsective could gain an additional argument 'fill' for the filled value (currently NA)
 ##      if so, check other packages (data.table, dplyr, tidyr, ...) what the argument is called there
 ##      arg would need to be a (named) list (for (p)data.frame methods) because columns of 
 ##      (p)data.frames are of arbitraty classes
@@ -67,12 +67,12 @@ make.pconsecutive.indexes <- function(x, index, balanced = FALSE, ...) {
   n_id_orig <- length(unique(id_orig))
   
   if (!balanced) { 
-  min_values <- by(df_index[, "times"], df_index[ , "id"], min)
-  max_values <- by(df_index[, "times"], df_index[ , "id"], max)
-  
-  times_filled_list <- sapply(seq_len(n_id_orig), function(i) {
-      seq(from = min_values[i], to = max_values[i], by = 1)
-    }, simplify = FALSE)
+    min_values <- by(df_index[ , "times"], df_index[ , "id"], min)
+    max_values <- by(df_index[ , "times"], df_index[ , "id"], max)
+    
+    times_filled_list <- sapply(seq_len(n_id_orig), function(i) {
+        seq(from = min_values[i], to = max_values[i], by = 1)
+      }, simplify = FALSE)
   
   } else {
     min_value <- min(df_index[, "times"])
@@ -175,7 +175,7 @@ make.pconsecutive.pdata.frame <- function(x, balanced = FALSE, ...){
   # attrib_names_before <- names(attributes(x_pdf_filled))
   
   # restore original order of columns:
-  # this also places index vars at original position or drop them if they were not in original pdata.frame
+  # this also places index vars at original position or drops them if they were not in original pdata.frame
   # (do only if order of columns differs or index is not in pdata.frame to avoid adding extra attributes by subsetting)
   if (!isTRUE(all.equal(orig_column_names, names(x_pdf_filled)))) x_pdf_filled <- x_pdf_filled[ , orig_column_names]
   
@@ -219,7 +219,7 @@ make.pconsecutive.pseries <- function(x, balanced = FALSE, ...) {
     
     x <- pdf_index_filled_plus_x$x
   }
-    return(x)
+  return(x)
 } ## END: make.pconsecutive.pseries
 
 
@@ -229,86 +229,133 @@ make.pconsecutive <- function(x, ...){
 
 
 ############# make.pbalanced #############
-## make.pbalanced.* methods make the input balanced but not consecutive, i.e.
-## only those missing time periods are introduced that are present for at least
-## one individual
+## make.pbalanced.* methods make the input balanced (but not consecutive).
+## It does so by either 
+## balance.type = "fill": filling in only those missing time periods are 
+##                        introduced that are present for at least one individual
+##                        (union of time periods)
 ##
-## possible enhancement of function: 
-##  instead of filling in NA values, we also reduce the data to those time periods
-##  that are shared by all individuals
-##  => introduce some argument like type = c("fill", "shared"), where "fill" is the current implementation
-make.pbalanced.pdata.frame <- function(x, ...) {
+## balance.type = "shared": remove all observations with time periods which are
+##                          not shared among all individuals
+##                          (intersect of time periods)
+make.pbalanced.pdata.frame <- function(x, balance.type = c("fill", "shared"), ...) {
+  
+  balance.type <- match.arg(balance.type)
   index <- attr(x, "index")
-  x_consec_bal <- make.pconsecutive(x, balanced = TRUE)
   
-  # delete time periods that were not present for any individual, but introduced by
-  # making data consecutive
-  # result: no time periods are added that are not present for at least one individual
-  times_present_orig <- attr(x_consec_bal, "index")[[2]] %in% unique(index[[2]])
-  result <- x_consec_bal[times_present_orig, ]
-  
-  # drop not present factor levels (some new levels were introduced by making data consecutive first):
-    # drop from index
-    index_result <- attr(result, "index")
-    index_result[[2]] <- droplevels(index_result[[2]])
-    attr(result, "index") <- index_result
+  if (balance.type == "fill") {
+    x_consec_bal <- make.pconsecutive(x, balanced = TRUE)
     
-    # drop from time column (if time index column present in pdata.frame)
-    pos_indexvars <- pos.index(result) # position of index vars is c(NA, NA) if index vars are not present as columns
-    index_orig_names <- names(pos_indexvars)
-    if (!any(is.na(pos_indexvars))) {
-      result[ , pos_indexvars[2]] <- droplevels(result[ , pos_indexvars[2]])
-    }
+    # delete time periods that were not present for any individual, but introduced by
+    # making data consecutive
+    # result: no time periods are added that are not present for at least one individual
+    times_present_orig <- attr(x_consec_bal, "index")[[2]] %in% unique(index[[2]])
+    result <- x_consec_bal[times_present_orig, ]
+    
+    # drop not present factor levels (some new levels were introduced by making data consecutive first):
+      # drop from index
+      index_result <- attr(result, "index")
+      index_result[[2]] <- droplevels(index_result[[2]])
+      attr(result, "index") <- index_result
+      
+      # drop from time column (if time index column present in pdata.frame)
+      pos_indexvars <- pos.index(result) # position of index vars is c(NA, NA) if index vars are not present as columns
+      index_orig_names <- names(pos_indexvars)
+      if (!any(is.na(pos_indexvars))) {
+        result[ , pos_indexvars[2]] <- droplevels(result[ , pos_indexvars[2]])
+      }
+  } else {
+    ## balance.type == shared
+    keep <- intersect_index_by_time(index)
+    result <- x[keep, ]
+  }
   
   return(result)
 } ## END make.pbalanced.pdata.frame
 
-make.pbalanced.pseries <- function(x, ...) {
+
+make.pbalanced.pseries <- function(x, balance.type = c("fill", "shared"), ...) {
   index <- attr(x, "index")
-  x_consec_bal <- make.pconsecutive(x, balanced = TRUE)
-  
-  # delete time periods that were not present for any individual, but introduced by
-  # making data consecutive
-  # result: no time periods are added that are not present for at least one individual
-    x_consec_bal_index <- attr(x_consec_bal, "index")
-    times_present_orig <- x_consec_bal_index[[2]] %in% unique(index[[2]])
-    result <- x_consec_bal[times_present_orig] # this drops the pseries features (index, class "pseries")
-                                               # because there is no function "[.pseries]" (as of 2016-05-14)
+  balance.type <- match.arg(balance.type)
+
+  if (balance.type == "fill") {
+    x_consec_bal <- make.pconsecutive(x, balanced = TRUE)
     
-    # drop introduced extra periods also from index
-    x_consec_bal_index <- x_consec_bal_index[times_present_orig, ]
-  # re-attach index and restore original class(es)
-  attr(result, "index") <- x_consec_bal_index
-  attr(result, "class") <- attr(x, "class")
+    # delete time periods that were not present for any individual, but introduced by
+    # making data consecutive
+    # result: no time periods are added that are not present for at least one individual
+      x_consec_bal_index <- attr(x_consec_bal, "index")
+      times_present_orig <- x_consec_bal_index[[2]] %in% unique(index[[2]])
+      result <- x_consec_bal[times_present_orig] # this drops the pseries features (index, class "pseries")
+                                                 # because there is no function "[.pseries]" (as of 2016-05-14)
+      
+      # drop introduced extra periods also from index
+      x_consec_bal_index <- x_consec_bal_index[times_present_orig, ]
+    # re-attach index and restore original class(es)
+    attr(result, "index") <- x_consec_bal_index
+    attr(result, "class") <- attr(x, "class")
+    
+  } else {
+    ## balance.type == shared
+    keep <- intersect_index_by_time(index)
+    result <- x[keep]
+    # restore 'pseries' features
+    # (no subsetting method for pseries in the package (yet),
+    #  usual vector subsetting removes the pseries features)
+    attr(result, "index") <- index[keep, ]
+    class(result) <- union("pseries", class(result))
+  }
   
   return(result)
 } ## END make.pbalanced.pseries
 
-make.pbalanced.data.frame <- function(x, index = NULL, ...) {
+make.pbalanced.data.frame <- function(x, balance.type = c("fill", "shared"), index = NULL, ...) {
   # NB: for data.frame interface: the data is also sorted as stack time series
 
-  # if not NULL, index is must be character of length 2
-  if (!is.null(index) & length(index) != 2)
-    stop("if argument 'index' is not NULL, 'index' needs to specify
-         'individual' and 'time' dimension for make.pconsecutive to work on a data.frame")
+  balance.type <- match.arg(balance.type)
+
+  ## identify index of data.frame  
+      # if not NULL, index is must be character of length 2
+      if (!is.null(index) & length(index) != 2)
+        stop("if argument 'index' is not NULL, 'index' needs to specify
+             'individual' and 'time' dimension for make.pconsecutive to work on a data.frame")
+      
+      # assume first two columns to be the index vars
+      if (is.null(index)) index_orig_names <- names(x)[1:2]
+        else index_orig_names <- index
+      
+      index_df <- x[ , index_orig_names]
   
-  # assume first two columns to be the index vars
-  if (is.null(index)) index_orig_names <- names(x)[1:2]
-    else index_orig_names <- index
-  
-  index_df <- x[ , index_orig_names]
-  
-  x_consec_bal <- make.pconsecutive(x, index = index_orig_names, balanced = TRUE)
-  
-  # delete time periods that were not present for any individual, but introduced by
-  # making data consecutive
-  # result: no time periods are added that are not present for at least one individual
-  times_present_orig <- x_consec_bal[ , index_orig_names[2]] %in% unique(index_df[[2]])
-  result <- x_consec_bal[times_present_orig , ]
+  if (balance.type == "fill") {
+    x_consec_bal <- make.pconsecutive(x, index = index_orig_names, balanced = TRUE)
+    
+    # delete time periods that were not present for any individual, but introduced by
+    # making data consecutive
+    # result: no time periods are added that are not present for at least one individual
+    times_present_orig <- x_consec_bal[ , index_orig_names[2]] %in% unique(index_df[[2]])
+    result <- x_consec_bal[times_present_orig , ]
+  } else {
+    ## balance.type == shared
+    keep <- intersect_index_by_time(index_df)
+    result <- x[keep, ]
+  }
   
   return(result)
 } ## END make.pbalanced.data.frame
 
-make.pbalanced <- function(x, ...){
+make.pbalanced <- function(x, balance.type = c("fill", "shared"), ...) {
   UseMethod("make.pbalanced")
+}
+
+# helper function: returns logical vector which rows/entries to keep
+#                  when balance.type = "shared" (intersect of all time periods)
+intersect_index_by_time <- function(index) {
+  # intersect() is defined on vectors (not factors)
+  #  -> convert time index to character before
+  id <- index[[1]]
+  time <- as.character(index[[2]])
+  times_by_ids <- split(time, id)
+  common_times <- Reduce(intersect, times_by_ids) 
+  keep_entries <- time %in% common_times
+  return(keep_entries)
 }
